@@ -5,7 +5,9 @@ check_lm_sensors.pod
 check_lm_sensors.spec
 COPYING
 COPYRIGHT
+inc/Module/AutoInstall.pm
 inc/Module/Install.pm
+inc/Module/Install/AutoInstall.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Include.pm
 inc/Module/Install/Makefile.pm
