@@ -1,3 +1,7 @@
+2016-01-08  Matteo Corti  <matteo@corti.li>
+
+	* check_lm_sensors: dynamic usage of the deprecated Nagios:: or Monitoring:: plugins
+
 2015-11-23  Martin Schulze
 
 	* check_lm_sensors: fixed an issue with device names on new kernels 
